# triptych

./: Cargo.toml  README.md
src/: lib.rs
